# Claude-Code-Usage-Monitor

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CHANGELOG_JP.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  PULL_REQUEST_JP.md  README.md  README_JP.md  RELEASE.md  TODO.md  TROUBLESHOOTING.md  USAGE_JP.md  check_dependency.py  claude_monitor.py  init_dependency.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: lint.yml  release.yml  test.yml  version-bump.yml
src/claude_monitor/: __init__.py  __main__.py  _version.py  error_handling.py
src/claude_monitor/cli/: __init__.py  bootstrap.py  main.py
src/claude_monitor/core/: __init__.py  calculations.py  data_processors.py  models.py  p90_calculator.py  plans.py  pricing.py  settings.py
src/claude_monitor/data/: __init__.py  aggregator.py  analysis.py  analyzer.py  reader.py
src/claude_monitor/i18n/: __init__.py  messages.py
src/claude_monitor/monitoring/: __init__.py  data_manager.py  orchestrator.py  session_monitor.py
src/claude_monitor/terminal/: __init__.py  manager.py  themes.py
src/claude_monitor/ui/: __init__.py  components.py  display_controller.py  layouts.py  progress_bars.py  session_display.py  table_views.py
src/claude_monitor/utils/: __init__.py  formatting.py  model_utils.py  notifications.py  time_utils.py  timezone.py
src/tests/: conftest.py  run_tests.py  test_aggregator.py  test_analysis.py  test_calculations.py  test_cli_main.py  test_data_reader.py  test_display_controller.py  test_error_handling.py  test_formatting.py  test_monitoring_orchestrator.py  test_pricing.py  test_session_analyzer.py  test_settings.py  test_table_views.py  test_time_utils.py  test_timezone.py  test_version.py
src/tests/examples/: api_examples.py
usage_analyzer/: __init__.py  api.py
usage_analyzer/core/: __init__.py  calculator.py  data_loader.py  identifier.py
usage_analyzer/models/: __init__.py  data_structures.py
usage_analyzer/output/: __init__.py  json_formatter.py
usage_analyzer/themes/: __init__.py  config.py  console.py  detector.py  themes.py
usage_analyzer/utils/: __init__.py  path_discovery.py  pricing_fetcher.py
