# Automatically refactored pyproject.toml with best practices

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-monitor"
version = "3.0.0"
description = "A real-time terminal monitoring tool for Claude AI token usage with advanced analytics and Rich UI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Maciek", email = "maciek@roboblog.eu" }]
maintainers = [{ name = "Maciek", email = "maciek@roboblog.eu" }]
keywords = [
  "ai", "analytics", "claude", "dashboard",
  "developer-tools", "monitoring", "rich",
  "terminal", "token", "usage"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Topic :: Terminals",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Typing :: Typed"
]
dependencies = [
  "numpy>=1.21.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pyyaml>=6.0",
  "pytz>=2023.3",
  "rich>=13.7.0",
  "sentry-sdk>=1.40.0",
  "tomli>=1.2.0; python_version < '3.11'",
  "tzdata; sys_platform == 'win32'"
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "isort>=5.13.0",
  "mypy>=1.13.0",
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-benchmark>=4.0.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pytest-xdist>=3.6.0",
  "ruff>=0.12.0",
  "build>=0.10.0",
  "twine>=4.0.0"
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pytest-asyncio>=0.24.0",
  "pytest-benchmark>=4.0.0"
]
docs = [
  "sphinx>=5.0.0",
  "sphinx-rtd-theme>=1.2.0",
  "myst-parser>=0.18.0"
]
performance = [
  "memory-profiler>=0.60.0",
  "py-spy>=0.3.14",
  "pytest-benchmark>=4.0.0"
]
security = [
  "bandit>=1.7.10",
  "safety>=3.2.0"
]

[project.urls]
homepage = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor"
repository = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor.git"
documentation = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor#readme"
issues = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor/issues"
changelog = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor/releases"
"Discussions" = "https://github.com/Maciek-roboblog/Claude-Code-Usage-Monitor/discussions"

[project.scripts]
claude-monitor = "claude_monitor.__main__:main"
cmonitor = "claude_monitor.__main__:main"
ccm = "claude_monitor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["claude_monitor*"]
exclude = ["tests*", "src/tests*"]

[tool.setuptools.package-data]
claude_monitor = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
skip-string-normalization = false
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["claude_monitor"]
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["src"]
skip_glob = ["*/migrations/*", "*/venv/*", "*/build/*", "*/dist/*"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"
src = ["src"]
exclude = [
  ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
  ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d",
  ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
  ".tox", ".venv", ".vscode", "__pypackages__", "_build",
  "buck-out", "build", "dist", "node_modules", "site-packages", "venv"
]
select = [
  "A","ARG","B","BLE","C4","DTZ","E","EM","ERA","F","FBT","FLY","FURB",
  "G","ICN","I","INP","ISC","K","N","NPY","PTH","PERF","PIE","PL","PT",
  "PYI","Q","RSE","RET","RUF","S","SLF","SLOT","T10","T20","TCH","TID",
  "TRY","UP","YTT"
]
ignore = [
  "D100","D101","D102","D103","D104","D105","D107",
  "D203","D213","FBT001","FBT002","S101","S608",
  "PLR0913","PLR2004","C901","RUF012","ANN","T201",
  "EM101","EM102","BLE001"
]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[A-Za-z0-9_]*[A-Za-z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"src/tests/**/*.py" = [
  "D100","D101","D102","D103","D104","D105","D106","D107",
  "S101","PLR2004","ARG001","ARG002","FBT001","FBT002"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
show_error_context = true
pretty = true
color_output = true
error_summary = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["src.tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["sentry_sdk.*","rich.*","numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["src/tests"]
python_files = ["test_*.py","*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers","--strict-config","--color=yes","--tb=short",
  "--cov=claude_monitor","--cov-report=term-missing","--cov-report=html",
  "--cov-report=xml","--cov-fail-under=70","--no-cov-on-fail","-ra","-q"
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "benchmark: marks tests as benchmarks",
  "network: marks tests as requiring network access",
  "subprocess: marks tests as requiring subprocess"
]
filterwarnings = [
  "error",
  "ignore::UserWarning",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
branch = true
source = ["src/claude_monitor"]
omit = ["*/tests/*","*/test_*","*/__main__.py","*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod"
]
show_missing = true
skip_empty = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = ["src/tests"]
tests = ["B201","B301","B401","B501","B601","B602","B603","B604","B605","B606","B607","B608","B609","B610","B611","B701","B702","B703"]
skips = ["B101","B601"]

[tool.bandit.assert_used]
skips = ["*_test.py","test_*.py"]

[tool.sphinx.autodoc]
typehints = "description"
typehints_document_rtype = true
typehints_defaults = "comma"
